Portada e inicio de manual de programados

--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -2,8 +2,17 @@
 
 \section{Introducción}
 
+En este anexo se recoge la documentación técnica de programación, que incluye recomendaciones para el entorno de desarrollo, la estructura de directorio, los procesos de compilación, la configuración de integración e instalación de dependencias y las baterías de tests realizadas. 
+
 \section{Estructura de directorios}
 
+El repositorio del proyecto tiene la siguiente distribución de directorios:
+
+\begin{itemize}
+\tightlist
+\item
+
+\end{itemize}
 \section{Manual del programador}
 
 \section{Compilación, instalación y ejecución del proyecto}
