--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -11,6 +11,112 @@ El repositorio del proyecto tiene la siguiente distribución de directorios:
 \begin{itemize}
 \tightlist
 \item
+\texttt{/}: directorio raíz. Además de todas las rutas de aplicaciones y utilidades, que se detallan a continuación, hay una serie de archivos que cumplen las siguientes funciones:
+	\begin{itemize}
+	\tightlist
+	\item
+	\texttt{manage.py}: archivo de utilidad de línea de comandos para tareas 
+	administrativas de \emph{Django}.
+	\item
+	\texttt{.gitignore}: configuración de los archivos que no se encuentran en el 
+	repositorio de \emph{GitHub}. Queda a criterio del desarrollador modificar este archivo 
+	según las necesidades. 
+	\item
+	\texttt{.pylintrc}: archivo con configuración general de la herramienta de medición de calidad de código \texttt{pylint}.
+	\texttt{README.md}: archivo con recomendaciones de instalación y licencia para mostrar en la portada del repositorio de \emph{GitHub}.
+	\texttt{requirements.txt}: dependencias del proyecto. 
+	\end{itemize}
+
+\item 
+\texttt{/.github}: archivos de configuración de \emph{GitHub actions}.
+
+\item 
+\texttt{/Analysis}: archivos de la \emph{app Analysis}. Entre otros, aquí se pueden ver los modelos \emph{StockBase}, \emph{Sectores} y \emph{CambioMoneda}.
+
+\item 
+\texttt{/Analysis/migrations}: archivos, con migraciones de modelos a bases de datos, generados automáticamente por \emph{Django}.
+
+\item 
+\texttt{/Analysis/templates}: plantillas HTML que permiten ver múltiple información de un valor y su sector asociado.  
+
+\item 
+\texttt{/Analysis/templates/includes}: plantillas HTML auxiliares que aportan mejor organización al proyecto. Todas las plantillas tienen nombres con referencias a las funciones que cumplen para mejorar la mantenibilidad.
+
+\item 
+\texttt{/DashBoard}: archivos de la \emph{app} que gestiona el área de usuario, donde se puede realizar, por ejemplo, el control de una cartera y ver la distribución de pesos más adecuada. 
+
+\item 
+\texttt{/DashBoard/migrations}: archivos, con migraciones de modelos a bases de datos, generados automáticamente por \emph{Django}.
+
+\item 
+\texttt{/DashBoard/templates}: plantillas HTML que permiten ver información agregada sobre la cartera del usuario. También están disponibles los formularios de interacción con el usuario para las funcionalidades de esta \emph{app}.
+
+\item 
+\texttt{/DashBoard/templates/includes}: plantillas HTML auxiliares.
+
+\item 
+\texttt{/databases}: directorio en el que se encuentran las bases de datos de la aplicación. 
+
+\item 
+\texttt{/docs}: carpeta de documentación. 
+
+\item 
+\texttt{/docs/burndowns}: donde se almacenan las imágenes que corresponden a la evolución de los diferentes \emph{sprints}.
+
+\item 
+\texttt{/docs/latex}: documentación de la memoria y los anexos del Trabajo de Fin de Grado que ha llevado al desarrollo de este proyecto. 
+
+\item 
+\texttt{/docs/sphinx/_build/html}: documentación en formato HTML de todo el código del proyecto siguiendo el estilo de \emph{ReadTheDocs}.
+
+\item 
+\texttt{/FAT}: aplicación principal para gestión del proyecto. Aquí se encuentra el archivo de \texttt{settings.py} junto con otros archivos relevantes para el correcto funcionamiento del resto de aplicaciones. También se puede ver la configuración del enrutamiento a las bases de datos. Además, aquí se encuentra el archivo \texttt{.env} donde se guardan las claves secretas de \emph{Django} y \emph{NewsAPI}.
+
+\item 
+\texttt{/htmlcov}: informe de tests realizado con \texttt{coverage}.
+
+\item 
+\texttt{/Lab}: archivos de la \emph{app} que gestiona el laboratorio virtual. Aquí se encuentran los archivos de control de modelos ARIMA, estrategias basadas en \emph{machine learning}, etc. 
+
+\item 
+\texttt{/Lab/migrations}: directorio vacío porque esta \emph{app} utiliza modelos ya creados para otras aplicaciones del mismo proyecto; se crea automáticamente por \emph{Django}. Aquí podemos ver los formularios \emph{Django} que se utilizan para interactuar con el usuario. 
+
+\item 
+\texttt{/Lab/templates}: plantillas HTML que permiten ver información y mostrar con los formularios con los campos predefinidos en \texttt{forms.py}.
+
+\item 
+\texttt{/Lab/templates/includes}: plantillas HTML auxiliares.
+
+\item 
+\texttt{/log}: configuración del \emph{logger} y archivos de \emph{log} de los tests realizados. Estos archivos pueden ser útiles para futuros desarrolladores.
+
+\item 
+\texttt{/News}: archivos de la \emph{app} que gestiona las noticias y la información de valores de la portada web. 
+
+\item 
+\texttt{/News/migrations}: directorio vacío, igual que en \texttt{/Lab/migrations}.
+
+\item 
+\texttt{/Lab/templates}: plantillas HTML que permiten ver información y mostrar con los formularios con los campos predefinidos en \texttt{forms.py}.
+
+\item 
+\texttt{/Lab/templates/includes}: plantillas HTML auxiliares.
+
+\item 
+\texttt{/htmlcov}:
+
+\item 
+\texttt{/htmlcov}:
+
+\item 
+\texttt{/htmlcov}:
+
+\item 
+\texttt{/htmlcov}:
+
+
+
+
 
 \end{itemize}
 \section{Manual del programador}
