Mejoras en documentación online

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -839,7 +839,7 @@ journal = {Neural Comput.},
   	author = {Rodrigo Merino},
   	title = {\emph{FAT: Financial Analysis Tool’s documentation}},
   	year = {2024},
-  	howpublished = {\url{https://fat.readthedocs.io/es/latest/}},
+  	howpublished = {\url{https://fat.readthedocs.io/es/latest/intro.html#}},
   	note = {Online; Accedido el 01-Jun-2024},
 }
 
