--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -17,6 +17,10 @@
 % Landscape
 \usepackage{pdflscape}
 
+% Configuración para que el entorno Verbatim ajuste las líneas automáticamente
+\usepackage{fvextra}
+\DefineVerbatimEnvironment{verbatim}{Verbatim}{breaklines=true}
+
 % Links
 \PassOptionsToPackage{hyphens}{url}\usepackage[colorlinks]{hyperref}
 \hypersetup{
