Mejoras en memoria y anexos

--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -168,13 +168,13 @@
 %
 % Nuevo comando para tablas pequeñas (menos de una página).
 \newcommand{\tablaSmall}[5]{%
- \begin{table}
+ \begin{table}[H]
   \begin{center}
-   \rowcolors {2}{gray!35}{}
+   \rowcolors{2}{gray!35}{}
    \begin{tabular}{#2}
     \toprule
     #4
-    \otoprule
+    \midrule
     #5
     \bottomrule
    \end{tabular}
