--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -488,6 +488,22 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 22-Abr-2024},
 }
 
+@misc{ online:selenium,
+  	author = {Selenium Devs},
+  	title = {\emph{Selenium}},
+  	year = {2024},
+  	howpublished = {\url{https://www.selenium.dev/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:chrome_driver,
+  	author = {Google Devs},
+  	title = {\emph{chromedriver.exe}},
+  	year = {2024},
+  	howpublished = {\url{https://googlechromelabs.github.io/chrome-for-testing/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
 @ARTICLE{2020SciPy-NMeth,
   author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
             Haberland, Matt and Reddy, Tyler and Cournapeau, David and
