--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -55,3 +55,19 @@
     volume = {},
     doi = {10.1109/IEEESTD.1998.88286}
 }
+
+@misc{ online:selenium,
+  	author = {Selenium Devs},
+  	title = {\emph{Selenium}},
+  	year = {2024},
+  	howpublished = {\url{https://www.selenium.dev/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:chrome_driver,
+  	author = {Google Devs},
+  	title = {\emph{chromedriver.exe}},
+  	year = {2024},
+  	howpublished = {\url{https://googlechromelabs.github.io/chrome-for-testing/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
