--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -192,7 +192,7 @@ es compatible con varios formatos y estilos de \emph{docstrings} - \emph{PyDoc},
 
 En este trabajo, se ha escogido el formato de \emph{Numpy} para la documentación de código y el estilo de \emph{Read The Docs} para las plantillas de la documentación HTML.
 
-La documentación del código puede ser consultada en \href{https://fat.readthedocs.io/es/latest/index.html}{fat.readthedocs.io} o en \href{https://fat.readthedocs.io/es/latest/}{fat.rtfd.io}
+La documentación del código puede ser consultada en \href{https://fat.readthedocs.io/es/latest/intro.html}{fat.readthedocs.io} o en \href{https://fat.readthedocs.io/es/latest/intro.html}{fat.rtfd.io}
 
 
 \section{Integración y despliegue continuos (CI/CD)}\label{ci_cd}
@@ -361,6 +361,10 @@ interactividad y dinamismo a la página web.
 \subsection{python-dotenv}\label{python-dotenv}
 
 \emph{python-dotenv} \citep{online:dotenv} es una biblioteca que permite gestionar variables de entorno para aplicaciones \emph{Python}. Se puede utilizar, entre otros, para securizar las \emph{API keys} de \emph{Django} y \emph{News API}. 
+
+\subsection{Selenium}\label{selenium}
+
+\emph{Selenium} \citep{online:selenium} es una herramienta de código abierto para automatizar navegadores web. Permite a los desarrolladores y testers simular la interacción de un usuario con un sitio web, como hacer clic, llenar formularios y navegar entre páginas. Es compatible con varios navegadores y se puede usar con diferentes lenguajes de programación, entre ellos, \emph{Python}. Además, es ampliamente utilizado en pruebas automatizadas de aplicaciones web.
 
 \subsection{Draw.io}\label{draw_io}
 
