Mejoras en memoria y anexos

--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -1,6 +1,6 @@
 % ORIGINAL:
-% \documentclass[a4paper,12pt,twoside]{memoir}
-\documentclass[a4paper,12pt,oneside]{memoir}
+\documentclass[a4paper,12pt,twoside]{memoir}
+%\documentclass[a4paper,12pt,oneside]{memoir}
 
 % Castellano
 \usepackage[spanish,es-tabla]{babel}
