--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -92,9 +92,9 @@ Junto a la memoria se proporcionan los siguientes anexos:
 Los materiales que se adjuntan con la memoria son: 
 
 \begin{itemize}
-\tightlist
 \item
-	\textbf{Herramienta web FAT}: Financial Analysis Tool\citep{online:FAT_web}.
+	\textbf{Herramienta web}:
+	Este proyecto está especialmente pensado para ser utilizado en un entorno local, pero se ha dispuesto una página web para que el usuario pueda hacer pruebas antes de instalarlo en su equipo. Visitar \href{http://takeiteasy.pythonanywhere.com/}{FAT: Financial Analysis Tool}.
 \item	
 	\textbf{Vídeos de demostración}.
 \end{itemize}
@@ -102,11 +102,12 @@ Los materiales que se adjuntan con la memoria son:
 Además, los siguientes recursos están accesibles a través de internet:
 
 \begin{itemize}
-\tightlist
 \item
-  \textbf{Repositorio} del proyecto \citep{online:FAT_repo}.
+  \textbf{Repositorio}: 
+  Visitar \href{https://github.com/rmt0009alu/FAT}{https://github.com/rmt0009alu/FAT}.
 \item
-  \textbf{Documentación del código} del proyecto \citep{online:FAT_read_docs}.
+  \textbf{Documentación del código}: 
+  Visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs} 
 \end{itemize}
 
 
