--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -2,7 +2,19 @@
 
 \section{Introducción}
 
+En esta sección se presenta un breve manual de usuario que permita interaccionar con la herramienta de manera satisfactoria. Aquí se muestran los principales formularios y las opciones que tiene el usuario final para trabajar con este entorno. 
+
 \section{Requisitos de usuarios}
+
+\subsection{Uso en web}
+
+Este proyecto está especialmente pensado para ser utilizado en un entorno local, pero se ha dispuesto de una página web para que un usuario pueda hacer pruebas antes de instalarlo en su equipo. Visitar \href{http://takeiteasy.pythonanywhere.com/}{FAT: Financial Analysis Tool}.
+
+Los requisitos para usar esta funcionalidad no son más que disponer de un navegador web. De entre los más populares y modernos se ha probado la integración con \emph{Google Chrome}, \emph{Mozilla Firefox}, \emph{Brave Browser} y \emph{Microsoft Edge} con resultados satisfactorios. 
+
+\subsection{Uso en entorno local}
+
+
 
 \section{Instalación}
 
