Mejoras en anexos

--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -124,7 +124,7 @@ El repositorio del proyecto tiene la siguiente distribución de directorios:
 \end{itemize}
 
 
-\section{Manual del programador}
+\section{Manual del programador}\label{manual_programador}
 
 En este manual se explican los pasos más relevantes que se han seguido para la creación de este proyecto y que pueden servir como referencia para futuros desarrolladores. En él se explica cómo preparar el entorno de desarrollo y qué dependencias necesitaremos. Además, se detallan los pasos más relevantes en cuanto a compilación, instalación y ejecución.
 
