--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -8,15 +8,18 @@ En esta sección se presenta un breve manual de usuario que permita interacciona
 
 \subsection{Uso en web}
 
-Este proyecto está especialmente pensado para ser utilizado en un entorno local, pero se ha dispuesto de una página web para que un usuario pueda hacer pruebas antes de instalarlo en su equipo. Visitar \href{http://takeiteasy.pythonanywhere.com/}{FAT: Financial Analysis Tool}.
+Este proyecto está especialmente pensado para ser utilizado en un entorno local, pero se ha dispuesto una página web para que un usuario pueda hacer pruebas antes de instalarlo en su equipo. Visitar \href{http://takeiteasy.pythonanywhere.com/}{FAT: Financial Analysis Tool}.
 
 Los requisitos para usar esta funcionalidad no son más que disponer de un navegador web. De entre los más populares y modernos se ha probado la integración con \emph{Google Chrome}, \emph{Mozilla Firefox}, \emph{Brave Browser} y \emph{Microsoft Edge} con resultados satisfactorios. 
 
 \subsection{Uso en entorno local}
 
+Los requisitos previos para poder utilizar este proyecto se describen en los \textbf{pasos 1 a 3 que se indican en el manual del programador} \ref{manual_programador}.
 
 
 \section{Instalación}
+
+Para utilizar este proyecto en un entorno local lo mejor es seguir los \textbf{pasos 4 a 9 que se indican en el manual del programador} \ref{manual_programador}. 
 
 \section{Manual del usuario}
 
