--- a/docs/latex/tex/F_ODS.tex
+++ b/docs/latex/tex/F_ODS.tex
@@ -1,9 +1,49 @@
 \apendice{Anexo de sostenibilización curricular}
 
 \section{Introducción}
-Este anexo incluirá una reflexión personal del alumnado sobre los aspectos de la sostenibilidad que se abordan en el trabajo.
-Se pueden incluir tantas subsecciones como sean necesarias con la intención de explicar las competencias de sostenibilidad adquiridas durante el alumnado y aplicadas al Trabajo de Fin de Grado.
 
-Más información en el documento de la CRUE \url{https://www.crue.org/wp-content/uploads/2020/02/Directrices_Sosteniblidad_Crue2012.pdf}.
+El presente Trabajo de Fin de Grado ha abarcado temas relacionados con \emph{Django}, finanzas, teoría moderna de porfolios o teoría de Harry M. Markowitz, Sharpe Ratio, \emph{machine learning} y ARIMA, entre otros. Durante la realización de este proyecto, se han adquirido y aplicado diversas competencias en sostenibilidad, según las directrices establecidas por la CRUE. En este anexo, se reflejarán las reflexiones personales sobre cómo los aspectos de sostenibilidad se han integrado y abordado a lo largo del trabajo.
 
-Este anexo tendrá una extensión comprendida entre 600 y 800 palabras.
+\section{Competencias en sostenibilidad adquiridas}
+
+\subsection{Economía sostenible}
+
+Uno de los pilares fundamentales de la sostenibilidad es la economía. En el desarrollo de este trabajo, se ha aplicado la teoría de Harry M. Markowitz para la optimización de carteras y el Sharpe Ratio para evaluar el rendimiento ajustado al riesgo. Estas herramientas permiten a los inversores tomar decisiones más informadas y eficientes, minimizando riesgos y maximizando rendimientos, lo cual es esencial para una economía sostenible. Al aprender y aplicar estos conceptos, he adquirido una mayor comprensión de cómo las estrategias de inversión pueden contribuir a la estabilidad económica a largo plazo.
+
+\subsection{Innovación y desarrollo tecnológico}
+
+El uso de \emph{Django} como \emph{framework} para el desarrollo del proyecto destaca la importancia de la tecnología en la sostenibilidad. Este \emph{framework} es de código abierto, lo que promueve la colaboración y el intercambio de conocimiento, algo esencial para el desarrollo sostenible. Además, su eficiencia en el manejo de recursos y su escalabilidad aseguran que las aplicaciones desarrolladas sean sostenibles a largo plazo, tanto en términos de mantenimiento como de consumo de recursos.
+
+\section{Impacto social y ambiental}
+
+\subsection{Educación financiera}
+
+La integración de conceptos financieros avanzados y técnicas de \emph{machine learning} en este trabajo no solo tienen un impacto positivo en términos de economía y tecnología, sino también en la educación financiera. Al compartir los resultados y metodologías del trabajo, se contribuye a mejorar el conocimiento y la conciencia financiera. Una sociedad con mayor educación financiera es capaz de tomar decisiones más sostenibles, tanto a nivel individual como colectivamente, promoviendo así un desarrollo económico equitativo y responsable.
+
+\subsection{Licencia libre y repositorio público}
+
+El proyecto está bajo una licencia \emph{CC BY-NC-SA 4.0} (Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International) y está alojado en un repositorio público en \emph{GitHub}. Esto tiene varios impactos positivos en la sostenibilidad:
+
+\begin{itemize}
+\item
+Promoción del conocimiento abierto.
+\item
+Colaboración global.
+\item
+Eficiencia en el uso de recursos tecnológico y humanos.
+\end{itemize}
+
+\subsection{Documentación del proyecto}
+
+En este trabajo se ha dado especial relevancia a la documentación, tanto del código como de la teoría que fundamenta las decisiones tomadas durante el desarrollo. Esta documentación está disponible en \href{https://fat.readthedocs.io/es/latest/intro.html}{FAT. Read The Docs} y también se han creado \href{https://github.com/rmt0009alu/FAT/blob/main/docs/latex/anexos.pdf}{anexos} específicos para desarrolladores y usuarios. 
+
+Este enfoque tiene los siguientes beneficios en términos de sostenibilidad:
+
+\begin{itemize}
+\item
+Facilita la accesibilidad y la transparencia.
+\item
+Promueve el mantenimiento y la evolución del código. 
+\item
+Provee un recurso educativo para futuros estudiantes. 
+\end{itemize}
