--- a/docs/latex/tex/F_ODS.tex
+++ b/docs/latex/tex/F_ODS.tex
@@ -30,7 +30,7 @@ Promoción del conocimiento abierto.
 \item
 Colaboración global.
 \item
-Eficiencia en el uso de recursos tecnológico y humanos.
+Eficiencia en el uso de recursos tecnológicos y humanos.
 \end{itemize}
 
 \subsection{Documentación del proyecto}
